--- a/contactform.html
+++ b/contactform.html
@@ -25,7 +25,7 @@
         </div>
           <hr>
         </form>
-        <div class="signup" onclick="changeform()"><a href="#contact-section2">Already having account (Click here)</a></div>
+        <div class="signup" onclick="window.location.href='signup.html';"><a href="#contact-section2">Already having account (Click here)</a></div>
       </div>
     </div>
     
@@ -45,5 +45,4 @@
     
   </section>
 
-  <script src="js/form.js"></script>
 </body>
