--- a/contactform.html
+++ b/contactform.html
@@ -31,18 +31,5 @@
     
   </section>
 
-  <section id="contact-section1" class="sign1">
-    <div class="container">
-      <div class="container1">
-        <h2>Signup</h2>
-        <form>
-          <input type="Email" placeholder="Email" required><br>
-          <input type="text" placeholder="Password"><br>
-          <button class="submit">SignUp</button>
-        </form>
-      </div>
-    </div>
-    
-  </section>
-
+  <script src="js/app.js"></script>
 </body>
