--- a/signup.html
+++ b/signup.html
@@ -25,10 +25,12 @@
         <form>
           <input type="Email" placeholder="Email" required><br>
           <input type="text" placeholder="Password"><br>
-          <button class="submit" >SignUp</button>
+          <button class="submit" onclick="func1()">SignUp</button>
         </form>
       </div>
     </div>
     
   </section>
+
+  <script src="js/app.js"></script>
 </body>
